# L_systems

./: .gitignore  CMakeLists.txt  README.md  color.h  dependencies.txt  grammar.h  index.html  main.cpp  run.bat  symbol.h  turtle.h
apps/client/: README.md
apps/logic/include/: Chunk.h  Constituent.h  GrammarCS_1D.h  GrammarCS_3D.h  GrammarUnified.h  Grammar_3D.h  Symbol.h  Tile.h  grammar.h
apps/logic/src/Python/: interpreter.py  ppm_runner2.py  verifyer.py
apps/logic/src/cpp/: GrammarCS_1D.cpp  GrammarCS_3D.cpp  GrammarUnified.cpp  grammar.cpp  main.cpp
apps/logic/src/grammars/: clove.txt  cube_thing.txt  dragon.txt  general.txt  herb.txt  template_1D.txt  template_3D.txt
apps/logic/src/web/: vite.config.js
apps/logic/src/web/backend/: exe_runner.js
apps/logic/src/web/frontend/: package.json
apps/logic/src/web/frontend/js/: CellularAutomata.js  main.js  scene.js
documentation/: Constituent.md  Query_h.md  commands.md  grammar_3d_h.md  grammar_h.md  language.md  logs.md  main_doc.md  symbol_h.md  tile_h.md
documentation/resources/: Antonio Liapis.url  Perlin noise generation.url  Polygonal Map Generation for Games.html  Using Grammars to Define Procedural Generation.url
grammars/: first_language.txt  langauge_template.txt
include/: Consistuent.h  Constituent.h  GrammarCS.h  GrammarCS_1D.h  GrammarCS_3D.h  Map.h  Query.h  Tile.h  Utils.h  grammar.h  noise.h
scripts/: build.sh  run.bat  run.sh
source/Python/: interpreter.py
source/cpp/: grammar.h  main.cpp  symbol.h
source/cpp/output/: gram_gen.txt
source/grammars/: cube_thing.txt  langauge_template.txt
src/Python/: interpreter.py  verifyer.py
src/cpp/: Consistuent.h  GrammarCS.cpp  GrammarCS_1D.cpp  GrammarElement.h  GrammarUnified.cpp  Map.cpp  Tile.cpp  Tile.h  Tile_main.cpp  grammar.cpp  grammar.h  grammar_3d.h  main.cpp  map.h  noise.cpp  noise.h  noise_main.cpp  symbol.h  symbol_3d.h  vulkan_app.cpp
src/grammars/: L_sys.txt  class.txt  class2.txt  clove.txt  cube_thing.txt  first_3d.txt  first_language.txt  general.txt  herb.txt  template_1D.txt  template_3D.txt  test.txt
src/web/: index.html  main.js  package.json  vite.config.js
src/web/css/: style.css
src/web/frontend/js/: CellularAutomata.js  main.js
src/web/js/: CellularAutomata.js  main.js  scene.js
